// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should open and close the menu 1`] = `
.c9 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-weight: 700;
  font-size: 2.25rem;
  line-heihgt: 2.5rem;
}

.c7 {
  color: rgb(90, 94, 0);
  text-decoration: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.c7 :hover,
.c7 :active,
.c7 :focus {
  text-decoration: underline;
}

.c8 {
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  color: rgb(0, 0, 0);
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.c8 :first-of-type {
  margin-top: 0px;
}

.c8 :hover,
.c8 :active {
  color: rgb(0, 104, 69);
}

.c10 {
  padding: 0.5rem;
  background-color: rgba(255, 255, 255, .75);
  border-radius: 0.375rem;
  border-top-right-radius: 0.125rem;
  border-bottom-left-radius: 0.125rem;
  visibility: visible;
}

.c1 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c2 {
  box-sizing: border-box;
  background: rgba(255, 255, 255, .75);
  border-radius: 0.375rem;
  border-top-left-radius: 0.125rem;
  border-bottom-right-radius: 0.125rem;
  transition: all;
  transition-duration: 300ms;
  transition-timing-function: ease-out;
  visibility: visible;
}

.c3 {
  height: 2rem;
  width: 2rem;
}

.c6 {
  height: 2rem;
  width: 2rem;
}

.c4 {
  position: absolute;
  top: 0px;
  width: 100vw;
  height: 100vh;
  background: transparent;
  visibility: hidden;
  left: 100%;
}

.c5 {
  position: fixed;
  top: 0px;
  width: 18rem;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  background: rgba(255, 255, 255, .9);
  transition: all;
  transition-duration: 300ms;
  transition-timing-function: ease-in;
  box-shadow: 0 0 #0000,0 0 #0000,0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  visibility: hidden;
  right: -20rem;
}

.c0 {
  display: flex;
  flex-direction: row-reverse;
  padding: 0.5rem;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  position: fixed;
  z-index: 50;
  user-select: none;
}

<header
  class="c0"
>
  <button
    aria-label="Avaa valikko"
    class="c1 c2"
  >
    <svg
      aria-hidden="true"
      class="c3"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="c1 c4"
  />
  <nav
    aria-expanded="false"
    class="c5"
  >
    <button
      aria-label="Sulje valikko"
      class="c1"
    >
      <svg
        aria-hidden="true"
        class="c6"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 384 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
        />
      </svg>
    </button>
    <a
      class="c7 c8"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c7 c8"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c7 c8"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="c9 c10"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;

exports[`<Header /> should render 1`] = `
.c9 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-weight: 700;
  font-size: 2.25rem;
  line-heihgt: 2.5rem;
}

.c7 {
  color: rgb(90, 94, 0);
  text-decoration: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.c7 :hover,
.c7 :active,
.c7 :focus {
  text-decoration: underline;
}

.c8 {
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  color: rgb(0, 0, 0);
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.c8 :first-of-type {
  margin-top: 0px;
}

.c8 :hover,
.c8 :active {
  color: rgb(0, 104, 69);
}

.c10 {
  padding: 0.5rem;
  background-color: rgba(255, 255, 255, .75);
  border-radius: 0.375rem;
  border-top-right-radius: 0.125rem;
  border-bottom-left-radius: 0.125rem;
  visibility: visible;
}

.c1 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c2 {
  box-sizing: border-box;
  background: rgba(255, 255, 255, .75);
  border-radius: 0.375rem;
  border-top-left-radius: 0.125rem;
  border-bottom-right-radius: 0.125rem;
  transition: all;
  transition-duration: 300ms;
  transition-timing-function: ease-out;
  visibility: visible;
}

.c3 {
  height: 2rem;
  width: 2rem;
}

.c6 {
  height: 2rem;
  width: 2rem;
}

.c4 {
  position: absolute;
  top: 0px;
  width: 100vw;
  height: 100vh;
  background: transparent;
  visibility: hidden;
  left: 100%;
}

.c5 {
  position: fixed;
  top: 0px;
  width: 18rem;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  background: rgba(255, 255, 255, .9);
  transition: all;
  transition-duration: 300ms;
  transition-timing-function: ease-in;
  box-shadow: 0 0 #0000,0 0 #0000,0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  visibility: hidden;
  right: -20rem;
}

.c0 {
  display: flex;
  flex-direction: row-reverse;
  padding: 0.5rem;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  position: fixed;
  z-index: 50;
  user-select: none;
}

<header
  class="c0"
>
  <button
    aria-label="Avaa valikko"
    class="c1 c2"
  >
    <svg
      aria-hidden="true"
      class="c3"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="c1 c4"
  />
  <nav
    aria-expanded="false"
    class="c5"
  >
    <button
      aria-label="Sulje valikko"
      class="c1"
    >
      <svg
        aria-hidden="true"
        class="c6"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 384 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
        />
      </svg>
    </button>
    <a
      class="c7 c8"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c7 c8"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c7 c8"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="c9 c10"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;

exports[`<Header /> should render front page 1`] = `
.c9 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-weight: 700;
  font-size: 2.25rem;
  line-heihgt: 2.5rem;
}

.c7 {
  color: rgb(90, 94, 0);
  text-decoration: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.c7 :hover,
.c7 :active,
.c7 :focus {
  text-decoration: underline;
}

.c8 {
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  color: rgb(0, 0, 0);
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.c8 :first-of-type {
  margin-top: 0px;
}

.c8 :hover,
.c8 :active {
  color: rgb(0, 104, 69);
}

.c10 {
  padding: 0.5rem;
  background-color: rgba(255, 255, 255, .75);
  border-radius: 0.375rem;
  border-top-right-radius: 0.125rem;
  border-bottom-left-radius: 0.125rem;
  visibility: hidden;
}

.c1 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c2 {
  box-sizing: border-box;
  background: rgba(255, 255, 255, .75);
  border-radius: 0.375rem;
  border-top-left-radius: 0.125rem;
  border-bottom-right-radius: 0.125rem;
  transition: all;
  transition-duration: 300ms;
  transition-timing-function: ease-out;
  visibility: visible;
}

.c3 {
  height: 2rem;
  width: 2rem;
}

.c6 {
  height: 2rem;
  width: 2rem;
}

.c4 {
  position: absolute;
  top: 0px;
  width: 100vw;
  height: 100vh;
  background: transparent;
  visibility: hidden;
  left: 100%;
}

.c5 {
  position: fixed;
  top: 0px;
  width: 18rem;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  background: rgba(255, 255, 255, .9);
  transition: all;
  transition-duration: 300ms;
  transition-timing-function: ease-in;
  box-shadow: 0 0 #0000,0 0 #0000,0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  visibility: hidden;
  right: -20rem;
}

.c0 {
  display: flex;
  flex-direction: row-reverse;
  padding: 0.5rem;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  position: fixed;
  z-index: 50;
  user-select: none;
}

<header
  class="c0"
>
  <button
    aria-label="Avaa valikko"
    class="c1 c2"
  >
    <svg
      aria-hidden="true"
      class="c3"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="c1 c4"
  />
  <nav
    aria-expanded="false"
    class="c5"
  >
    <button
      aria-label="Sulje valikko"
      class="c1"
    >
      <svg
        aria-hidden="true"
        class="c6"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 384 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
        />
      </svg>
    </button>
    <a
      class="c7 c8"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c7 c8"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c7 c8"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="c9 c10"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;

exports[`<Header /> should render opened menu 1`] = `
.c9 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-weight: 700;
  font-size: 2.25rem;
  line-heihgt: 2.5rem;
}

.c7 {
  color: rgb(90, 94, 0);
  text-decoration: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.c7 :hover,
.c7 :active,
.c7 :focus {
  text-decoration: underline;
}

.c8 {
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  color: rgb(0, 0, 0);
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.c8 :first-of-type {
  margin-top: 0px;
}

.c8 :hover,
.c8 :active {
  color: rgb(0, 104, 69);
}

.c10 {
  padding: 0.5rem;
  background-color: rgba(255, 255, 255, .75);
  border-radius: 0.375rem;
  border-top-right-radius: 0.125rem;
  border-bottom-left-radius: 0.125rem;
  visibility: visible;
}

.c1 {
  cursor: pointer;
  height: 3rem;
  width: 3rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c2 {
  box-sizing: border-box;
  background: rgba(255, 255, 255, .75);
  border-radius: 0.375rem;
  border-top-left-radius: 0.125rem;
  border-bottom-right-radius: 0.125rem;
  transition: all;
  transition-duration: 300ms;
  transition-timing-function: ease-out;
  visibility: hidden;
}

.c3 {
  height: 2rem;
  width: 2rem;
}

.c6 {
  height: 2rem;
  width: 2rem;
}

.c4 {
  position: absolute;
  top: 0px;
  width: 100vw;
  height: 100vh;
  background: transparent;
  visibility: visible;
  left: 0px;
}

.c5 {
  position: fixed;
  top: 0px;
  width: 18rem;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  background: rgba(255, 255, 255, .9);
  transition: all;
  transition-duration: 300ms;
  transition-timing-function: ease-in;
  box-shadow: 0 0 #0000,0 0 #0000,0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  visibility: visible;
  right: 0px;
}

.c0 {
  display: flex;
  flex-direction: row-reverse;
  padding: 0.5rem;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  position: fixed;
  z-index: 50;
  user-select: none;
}

<header
  class="c0"
>
  <button
    aria-label="Avaa valikko"
    class="c1 c2"
  >
    <svg
      aria-hidden="true"
      class="c3"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="c1 c4"
  />
  <nav
    aria-expanded="true"
    class="c5"
  >
    <button
      aria-label="Sulje valikko"
      class="c1"
    >
      <svg
        aria-hidden="true"
        class="c6"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 384 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
        />
      </svg>
    </button>
    <a
      class="c7 c8"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c7 c8"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c7 c8"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="c9 c10"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;
